hard-gists/5b581d774fc8500325f7/run.log
=== Docker Run Log for 5b581d774fc8500325f7 ===
Started at: Mi 29. Okt 16:13:34 CET 2025

[2025-10-29 16:13:34] START: Running container for 5b581d774fc8500325f7
[2025-10-29 16:13:35] SUCCESS: Container 7c345158e37e00c7ae32698d3750920baa9b94f35ec8d06303325163ff98cce7 started for 5b581d774fc8500325f7
=== Container logs for 5b581d774fc8500325f7 ===
  File "/snippet.py", line 32
    print "PiCamera ready"
    ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5b581d774fc8500325f7 ===
[2025-10-29 16:13:37] INFO: Container 7c345158e37e00c7ae32698d3750920baa9b94f35ec8d06303325163ff98cce7 has stopped
